--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>About Celyne Kydd</title>
   </head>
-  <body>
+  <body class="bg-dark text-light">
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
         <a class="navbar-brand" href="index.html">Celyne Kydd</a>
@@ -86,7 +86,7 @@
     </div>
     <div id="contact" class="mt-5">
       <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:celynekydd@gmail.com" class="email-link"
+      <a href="mailto:celynekydd@gmail.com" class="email-link d-sm-block"
         >celynekydd@gmail.com</a
       >
     </div>
